<resources>
    <string name="app_name">Josh Skills</string>
    <string name="inbox_header">Josh Skills</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="downloading_certificate">Downloading your certificate</string>
    <string name="downloading_complete">Downloading complete</string>
    <string name="not_now">Not Now</string>
    <string name="not_now_underline"><u>Not Now</u></string>
    <string name="settings" translatable="false">Settings</string>
    <string name="header_congratulation">Congratulations</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="short_seconds">sec</string>
    <string name="volume_up_message">Please turn the volume up</string>
    <string name="storage_permission_message">To view or send media, allow Josh Skills access to your device\'s  photos, media and files.</string>
    <string name="record_permission_message">To record a Voice Message, allow Josh Skills access to your microphone and your device\'s  photos, media and files. Tap Settings > Permissions, and turn Microphone on and Storage on.</string>
    <string name="camera_permission_message">To capture photos and videos allow Josh Skills access to your camera  and your device\'s  photos, media and files.</string>
    <string name="type_message_hint">Type a message</string>
    <string name="open">OPEN</string>
    <string name="submit">Submit</string>
    <string name="play_button_description">Play button</string>
    <string name="continue_label">Continue</string>
    <string name="info_text" translatable="false">You will get a video based on your recording that you can share with your friends and family</string>
    <string name="message_size_limit">Message size limit exceeded</string>
    <string name="pdf_desc" formatted="false">%s Page \u2022 PDF</string>
    <string name="restart">Restart</string>
    <string name="restart_now" translatable="false">Restart Now</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="update_message">An update has just been downloaded.</string>
    <string name="update_download_success_message">An update has just been downloaded.</string>
    <string name="restart_course_message" translatable="false">क्या आप कोर्स फिर से शुरू करना चाहते हैं?(आपके कमाए Points आपके पास ही रहेंगे, लेकिन Course Lesson 1 से फिर से Start होगा)</string>
    <string name="slide_to_cancel">Slide To Cancel</string>
    <string name="explore_new">Course Dekhein</string>
    <string name="explorer_courses">Explore Courses</string>
    <string name="select_courses">Select Courses</string>
    <string name="start_course">Start Course</string>
    <string name="buy_course" translatable="false">Buy Course</string>
    <string name="start_learning">Start Learning</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_now" translatable="false">Upgrade Now</string>
    <string name="done">Done</string>
    <string name="find_more_courses">Find More Courses</string>
    <string name="buy_english_course" translatable="false">Buy English Course</string>
    <string name="internet_not_available_msz">Seems like your Internet is too slow or not available.</string>
    <string name="plz_wait">Please wait&#8230;</string>
    <string name="plz_wait_feedback">Please be patient \n Your feedback will be available in a few minutes.</string>
    <string name="your_mobile_number">Your Mobile Number </string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter valid Email Id</string>
    <string name="join_social_text">Join through your social accounts</string>
    <string name="confirm_number">Confirm your number</string>
    <string name="send_otp">Send OTP</string>
    <string name="or">OR</string>
    <string name="no_new_message_arrive">No new classes</string>
    <string name="something_went_wrong">Oops! Something Went Wrong</string>
    <string name="time_ago_now">few moments ago</string>
    <string name="time_ago_full_seconds">%1$d seconds ago</string>
    <string name="time_ago_full_minute">%1$d minute ago</string>
    <string name="time_ago_full_minutes">%1$d minutes ago</string>
    <string name="time_ago_full_hour">%1$d hour ago</string>
    <string name="time_ago_full_hours">%1$d hours ago</string>
    <string name="time_ago_full_days">%1$d days ago</string>
    <string name="time_ago_full_month">%1$d month ago</string>
    <string name="time_ago_full_months">%1$d months ago</string>
    <string name="time_ago_seconds">%1$d sec ago</string>
    <string name="time_ago_minute">%1$d min ago</string>
    <string name="time_ago_minutes">%1$d min ago</string>
    <string name="time_ago_hour">%1$d h ago</string>
    <string name="time_ago_hours">%1$d h ago</string>
    <string name="time_ago_yesterday_at">Yesterday at %1$s</string>
    <string name="time_ago_days">%1$d d ago</string>
    <string name="time_ago_month">%1$d m ago</string>
    <string name="time_ago_months">%1$d m ago</string>
    <string name="email_address">Email Address</string>
    <string name="attach_image">Attach an image</string>
    <string name="practice">Practice</string>
    <string name="status_with_colon">Status : </string>
    <string name="submit_answer">Submit Answer</string>
    <string name="improve_answer">Improve Answer</string>
    <string name="today_practise">Today\'s Practice</string>
    <string name="hold_to_record_msz">Press and hold to record an answer</string>
    <string name="upload_file_msz">Upload a file</string>
    <string name="your_answer">Your Recording</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="your_submitted_answer">Your Submitted Recording</string>
    <string name="type_your_answer_hint">Type your answer here&#8230;&#8230;&#8230;</string>
    <string name="viewing_support_app_not_exist">you may have not proper app for viewing this content</string>
    <string name="login_signup">Login\/Signup</string>
    <string name="wrong_otp">The OTP entered is incorrect. Please enter correct OTP or try regenerating the OTP</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="paise_kamao">Paise Kamao</string>
    <string name="copy_code">Referral code copied to clipboard</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="bill_detail_header">Bill Details</string>
    <string name="answer_not_submitted">Answer not submitted</string>
    <string name="use_tip">Use Tip</string>
    <string name="type_answer_label">Type your answer</string>
    <string name="upload_answer_label">Upload your answer</string>
    <string name="course_overview">Course Overview</string>
    <string name="recording_short" translatable="false">The recording should be more than one second!</string>
    <string name="submit_practise_msz">Please complete your task before Submitting</string>
    <string name="generic_message_for_error">An error occurred, please try again!</string>
    <string name="referral_header" formatted="false">Do you want your friends to grow too?</string>
    <string name="share_more_text"><b>Share Knowledge, Earn Love</b></string>
    <string name="go_to_course">Go To Course</string>
    <string name="video_url_not_exist">Something went wrong! Video does not exist</string>
    <string name="volume">Volume: %1$d</string>
    <string name="brightness">Brightness: %1$d</string>
    <string name="seconds">%1$d seconds</string>
    <string name="course_progress_detail">You have completed %s of the course</string>
    <string name="course_duration_day" formatted="false">Day %s %s</string>
    <string name="unlock_progress_header">To unlock &amp; download certificate, you need to complete at least %s of the course</string>
    <string name="sample_certificate">View Sample Certificate</string>
    <string name="certificate_progress_h">Certificate Progress</string>
    <string name="claim_certificate_h">Claim Certificate</string>
    <string name="performance_h">Performance</string>
    <string name="your_performance_so_far">Your Performance So Far</string>
    <string name="download_certificate">Download Digital Copy</string>
    <string name="certificate_unmodify_msz">Please fill carefully, no changes will be possible</string>
    <string name="certificate_generate_message">Your certificate will be sent to you on mail.\n Thank you!</string>
    <string name="details_not_change_message">Details cannot be changed again</string>
    <string name="practice_submitted">Practice Submitted!</string>
    <string name="feedback_sub_practise">Please Rate This Practice</string>
    <string name="feedback_sub_video">Please Rate This Video</string>
    <string name="feedback_hint">Please share your detailed feedback</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="permission_dialog_description"><![CDATA[Agar aap course ko leke serious ho aur <b>Lessons</b> reminder and <b>Practice partner</b> calls miss nahi karna chahate ho to:<br><br><b>Settings</b> me jake <b>Auto Start</b> ko <b>ON</b> kare]]></string>
    <string name="allow">Allow</string>
    <string name="go_to_settings" translatable="false">Go to Settings</string>
    <string name="allow_autostart" translatable="false">Allow app to Auto Start</string>
    <string name="serious_student_ho">Kya aap Serious Student ho?</string>
    <string name="try_again">Try again</string>
    <string name="chat_option">Chat &amp; Pay</string>
    <string name="title">Oops! Payment failed.</string>
    <string name="trx_id">Transaction ID : %s</string>
    <string name="reason">Reason : %s</string>
    <string name="starting_title">You Made it!</string>
    <string name="starting_info">Aapka swaagat hai\n %s mein</string>
    <string name="starting_info_2">You are Successfully enrolled in\n %s</string>
    <string name="tutor_line">I am excited to teach you</string>
    <string name="tutor_register">Please register to start</string>
    <string name="tutor_start">Let\'s get started</string>
    <string name="register_now">Register Now</string>
    <string name="start">Start My Course</string>
    <string name="tip_used_info">Tip Used! You got bade bhaiya\ndiscount of <b>₹ %s</b></string>
    <string name="bade_bhaiya_tips_new">Bade\nBhaiya\nTip!</string>
    <string name="tip_title">You can get discount on all Coures!</string>
    <string name="tip_valid">Valid for next %s Days</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="save" translatable="false">Save</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="interests_select_same_interest_users_connect">आपके interests select कीजिए ताकी हम आपको same interest के users से connect करवा सकें</string>
    <string name="practice_call_experience">Practice call का experience बेहतर बनाएँ</string>
    <string name="english_level">आपकी English का level क्या है ?</string>
    <string name="beginner" translatable="false">Beginner</string>
    <string name="intermediate" translatable="false">Intermediate</string>
    <string name="advanced" translatable="false">Advanced</string>
    <string name="what_problem">Please share your complaint:</string>
    <string name="lodge_complaint">Lodge a Complaint</string>
    <string name="type_your_name">Type your name</string>
    <string name="type_your_mobile">Type your mobile</string>
    <string name="type_your_email">Type your email</string>
    <string name="type_problem">Please explain your problem in detail</string>
</resources>