<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="handler"
                type="com.joshtalks.joshskills.ui.help.LodgeComplaintFragment" />

    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

            <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="@dimen/_4sdp"
                    app:contentPadding="@dimen/_10sdp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="#000000"
                            android:textSize="@dimen/font_20" />

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_name"
                            android:hint="@string/type_your_name"
                            android:textColorHint="@color/gray_e6" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="@dimen/_4sdp"
                    app:contentPadding="@dimen/_10sdp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile_number"
                            android:textColor="#000"
                            android:textSize="@dimen/font_20" />

                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_number"
                            android:hint="@string/type_your_mobile"
                            android:inputType="phone"
                            android:textColorHint="@color/gray_e6" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="@dimen/_4sdp"
                    app:contentPadding="@dimen/_10sdp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_address"
                            android:textColor="#000"
                            android:textSize="@dimen/font_20" />


                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_email"
                            android:hint="@string/type_your_email"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/gray_e6" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:cardCornerRadius="@dimen/_4sdp"
                    app:cardElevation="@dimen/_4sdp"
                    app:contentPadding="@dimen/_10sdp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_complaint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/what_problem"
                            android:textColor="#000"
                            android:textSize="@dimen/font_20" />


                    <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_complaint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_complaint"
                            android:gravity="top|start"
                            android:hint="@string/type_problem"
                            android:inputType="textMultiLine"
                            android:lines="8"
                            android:maxLines="10"
                            android:minLines="4"
                            android:scrollbars="vertical"
                            android:textColorHint="@color/gray_e6" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/iv_attach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:drawableStart="@drawable/ic_attachment"
                        android:drawablePadding="@dimen/_8sdp"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:onClick="@{()->handler.attachMedia()}"

                        android:src="@drawable/ic_attachment"
                        android:text="@string/attach_image" />


                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_report_problem"
                        style="@style/Widget.MaterialComponents.Button"
                        fontPath="fonts/OpenSans-SemiBold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_attach"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:backgroundTint="@color/button_primary_color"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:onClick="@{()->handler.lodgeComplaint()}"

                        android:padding="@dimen/_10sdp"
                        android:text="@string/lodge_complaint"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_14"
                        app:cornerRadius="@dimen/_4sdp"
                        app:rippleColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>