<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtVHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:text="@string/english_level"
            android:textColor="@color/pitch_black"
            android:textAppearance="@style/TextAppearance.JoshTypography.Heading_H3_Bold"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioBtnGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVHeading">

            <RadioButton
                android:id="@+id/btn_level_beginner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_radio_btn_eng_level_selector"
                android:textSize="@dimen/_18ssp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:checkable="true"
                android:textAppearance="@style/TextAppearance.JoshTypography.Heading_H3_Bold"
                android:textColor="@color/interest_chip_text_color_selector"
                android:button="@drawable/transparent"
                android:checked="false"
                android:text="@string/beginner"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_24sdp"
                android:textAlignment="center"
                app:rippleColor="@color/interest_chip_bg_selected"/>

            <RadioButton
                android:id="@+id/btn_level_inter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_radio_btn_eng_level_selector"
                android:textSize="@dimen/_18ssp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:checkable="true"
                android:textAppearance="@style/TextAppearance.JoshTypography.Heading_H3_Bold"
                android:textColor="@color/interest_chip_text_color_selector"
                android:button="@drawable/transparent"
                android:checked="false"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_24sdp"
                android:textAlignment="center"
                app:rippleColor="@color/interest_chip_bg_selected"
                android:text="@string/intermediate"/>

            <RadioButton
                android:id="@+id/btn_level_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_radio_btn_eng_level_selector"
                android:textSize="@dimen/_18ssp"
                android:layout_marginVertical="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:checkable="true"
                android:textAppearance="@style/TextAppearance.JoshTypography.Heading_H3_Bold"
                android:textColor="@color/interest_chip_text_color_selector"
                android:button="@drawable/transparent"
                android:checked="false"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_24sdp"
                android:textAlignment="center"
                app:rippleColor="@color/interest_chip_bg_selected"
                android:text="@string/advanced"/>

        </RadioGroup>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/rounded_state_button_bg"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/continue_label"
            android:enabled="false"
            android:textAppearance="@style/TextAppearance.JoshTypography.Button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>