<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/skip"
            android:textAppearance="@style/TextAppearance.JoshTypography.Title_Group_smaller"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/interest_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/practice_call_experience"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_36sdp"
            android:lineSpacingExtra="-8dp"
            android:textAppearance="@style/TextAppearance.JoshTypography.Heading_H3_Bold"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@color/pitch_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/interest_subtitle_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:text="@string/interests_select_same_interest_users_connect"
            android:textAppearance="@style/TextAppearance.JoshTypography.Body_Text_Small_Regular"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interest_title_tv" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:paddingHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/submit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interest_subtitle_tv">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/interest_cg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_8sdp"
                app:chipSpacingVertical="@dimen/_6sdp"
                app:singleLine="false"
                app:singleSelection="false">
            </com.google.android.material.chip.ChipGroup>

        </ScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/rounded_state_button_bg"
            android:enabled="false"
            android:gravity="center"
            android:onClick="@{}"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.JoshTypography.Button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
